<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activity.Menu.PilihanArtikelActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:background="@drawable/tmbl"
        android:text="@string/anak_kucing"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="110dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:background="@drawable/tmbl"
        android:text="@string/kucing_dewasa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="52dp" />



    <Button
        android:id="@+id/kembali"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="665dp"
        android:background="@drawable/tmbl"
        android:text="@string/kembali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="52dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="193dp"
        android:layout_marginTop="28dp"
        android:text="@string/artikel"
        android:textColor="@color/hitam"
        android:textStyle="bold" />
</RelativeLayout>